--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: docker/build-push-actionv2
+      - uses: docker/build-push-action@v2
         with:
           file: Dockerfile
           tags: py3wine
