--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -9,6 +9,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: setup Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       - uses: docker/build-push-action@v2
         with:
           file: Dockerfile
