[WIP] small fix

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -25,8 +25,8 @@ jobs:
           push: true
           tags: ghcr.io/${{ github.repository }}:${{ github.sha }}
 
-      - name: send a slack message
-              uses: docker://technosophos/slack-notify
-              env:
-                SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }} #WEBHOOK URL
-                SLACK_MESSAGE: "build complete"
+          #      - name: send a slack message
+          #        uses: docker://technosophos/slack-notify
+          #        env:
+          #          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }} #WEBHOOK URL
+          #          SLACK_MESSAGE: "build complete"
