--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -19,14 +19,15 @@ jobs:
           password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Build and Push image to GitHub Container Registry
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}:${{ github.sha }}
+          tags: ghcr.io/${{ github.repository }}:${{ github.sha }} , ghcr.io/${{ github.repository }}:latest
 
-          #      - name: send a slack message
-          #        uses: docker://technosophos/slack-notify
-          #        env:
-          #          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }} #WEBHOOK URL
-          #          SLACK_MESSAGE: "build complete"
+      - name: send a slack message
+        uses: bryannice/gitactions-slack-notification@2.0.0
+        env:
+          SLACK_INCOMING_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }} #WEBHOOK URL
+          SLACK_TITLE: {{ github.job  }}' job of '${{ github.repository  }}' has '${{ job.status  }}
+          SLACK_MESSAGE: ${{ github.job  }}' job in worflow '${{ github.workflow  }}' of '${{ github.repository  }}' has '${{ job.status  }}
