--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,38 +1,51 @@
-name: python3-on-wine-on-alpine
+name: Build python wine
 on:
   push:
     paths:
       - 'Dockerfile'
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  packages: write
+
+env:
+  DOCKER_BUILDKIT: 1
+  REGISTRY: ghcr.io
 
 jobs:
-  push_to_registry:
+  build_and_push:
     name: Push custom Docker image to GitHub Container Registry (ghcr.io)
     runs-on: ubuntu-latest
-    permissions:
-      packages: read
     steps:
       - name: Check out repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Login to GitHub Packages
         uses: docker/login-action@v1
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Build and Push image to GitHub Container Registry
         uses: docker/build-push-action@v4
         with:
           context: .
+          file: Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}:${{ github.sha }}
-            ghcr.io/${{ github.repository }}:latest
+            ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{ github.repository }}:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: send a slack message
         uses: bryannice/gitactions-slack-notification@2.0.0
         env:
           SLACK_INCOMING_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }} #WEBHOOK URL
-          SLACK_TITLE: ${{ github.job  }} job of ${{ github.repository  }} has ${{ job.status  }}
-          SLACK_MESSAGE: ${{ github.job  }} job in worflow ${{ github.workflow  }} of ${{ github.repository  }} has ${{ job.status  }}
+          SLACK_TITLE: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
+          SLACK_MESSAGE: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
