fix: change cache place to registry
ref: https://github.com/docker/setup-buildx-action/issues/124

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -38,10 +38,10 @@ jobs:
           file: Dockerfile
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.sha }}
-            ${{ env.REGISTRY }}/${{ github.repository }}:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+            ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ github.repository }}:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ github.repository }}:latest
+          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ github.repository }}:buildcache
+          cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ github.repository }}:buildcache,mode=max
 
       - name: send a slack message
         uses: bryannice/gitactions-slack-notification@2.0.0
